# ChangeLog for media-sound/freqtweak
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $