@@ -1,5 +1,5 @@
 AUX freqtweak-0.7.2-many-fixes.patch 55179 RMD160 343c213a04cb30cc40d443fb8fac83c644e6a0da SHA1 5fdd2e9bae08a8c79573c97bd487a10ac48c6344 SHA256 18c64a2a41823c57994b85f16d10c33af95b7c5a7b26d36f87231dc47e5d176d
 DIST freqtweak-0.7.2.tar.gz 239792 RMD160 6edae0087241428f3498629cc5ccc410c55582f0 SHA1 f66bc46739dc91067f8bd7d433de71eb12bc029a SHA256 49cd35ecc95ae566886cd9029f8ed98b79ee1217d01395f500f8033476e155de
-EBUILD freqtweak-0.7.2.ebuild 986 RMD160 8b917de636b345bd7fc63abded7c4b8efb3bfa86 SHA1 77104d2dba8edbe57694d77eca49a0adbd669cb6 SHA256 6149bea687703e8ddf516bc9acb9dbf0918b2d7ae5160616d592fe52bb528e28
-MISC ChangeLog 121 RMD160 bf71e254872442349e9f321470f6a3cf3cd3ce86 SHA1 71da18db9e8f74572dcc0d22ed1886cc970dee7f SHA256 f2b7d4f2d5ffd0f96bc4e789b826f957de55cbca316e3c7b0e09a49fe5c7a5af
+EBUILD freqtweak-0.7.2-r1.ebuild 957 RMD160 82380b9b7521471cdc912defe7f23bd4b681b41a SHA1 a951b9cc4222edec2fa006e610938824f5c1767a SHA256 5a4d0860af96bf71ba940c5b773edad1a375461f2617687c7a79b96e34b9de91
+MISC ChangeLog 231 RMD160 98a82643265a785ac3cd75d7534fd23c98a0db4c SHA1 d7c616eb9037af76fae1db226b9207dd6b7d5538 SHA256 d60ccf459c4e9220a1576e0027391569ce46cb233469fa4718d674797d7a9f6e
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
